manipulate: fix placement of animating gear on firefox

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/plots/ui/manipulator/ManipulatorStyles.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/plots/ui/manipulator/ManipulatorStyles.css
@@ -91,3 +91,13 @@
    margin-left: 5px;
    margin-top: 5px;
 }
+
+@if user.agent gecko1_8 {
+   .manipulateProgress {
+      margin-left: 6px;
+   }
+}
+
+
+
+
